--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
@@ -14,6 +16,10 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+}
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "9.4.1"
 }
 
 allprojects {
